--- a/Israeli_page.html
+++ b/Israeli_page.html
@@ -55,7 +55,7 @@
                     <p> The word 'Arais' is a plural version of 'arus', a bride in Arabic. The origin of the name is in Arab countries and certain tribes where this dish was used to be served in honor of newlyweds. The pita is cut in half, stuffed with meat, then grilled well. </p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="\firstdiimagessh.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Arais.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Pita Sabich.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Pita Sabich</h1>
@@ -262,7 +262,7 @@
                     <p>A hamantash is a Jewish triangular filled-pocket pastry, associated with the Jewish holiday of Purim. The name refers to Haman, the villain in the Purim story.</p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Black&White Hamantash.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -361,7 +361,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Arak Attack.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Arak Attack</h1>
