--- a/Italian_page.html
+++ b/Italian_page.html
@@ -45,6 +45,8 @@
             </nav>
         </div>
     </div>
+
+    <h1>Italian Recepies</h1>
     <H1>Starter</H1>
     <section id="head">
         <div class="container-fluid">
@@ -54,7 +56,7 @@
                     <p>Gazpacho is a cold soup made of raw fresh veggies, stale bread, vinegar, garlic, and olive oil. </p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Gazpacho.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -143,7 +145,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Squid Ink Ravioli (stuffed with egg-yolk).jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Squid Ink Ravioli (stuffed with egg-yolk)</h1>
@@ -249,7 +251,7 @@
                     <p>a classic tiramisù can be transcendent. A creamy dessert of espresso-soaked ladyfingers surrounded by lightly sweetened whipped cream and a rich mascarpone, tiramisù relies heavily on the quality of its ingredients.</p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Tiramisù.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -335,7 +337,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Negroni sbagliato.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Negroni sbagliato</h1>
