--- a/Mexican_page.html
+++ b/Mexican_page.html
@@ -45,6 +45,8 @@
             </nav>
         </div>
     </div>
+
+    <h1>Mexican Recepies</h1>
     <H1>Starter</H1>
     <section id="head">
         <div class="container-fluid">
@@ -54,7 +56,7 @@
                     <p> the most addictive dip I’ve tasted recently- is Salsa Verde. This delicious Mexican green (Verde) salsa is made with roasted tomatillos, chili peppers, lime juice, cilantro, garlic, and onion. You can dip it with chips, spread it on meat, or add it to your tacos! This salsa is crazy delicious. Huge YASSS here. </p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Salsa Verde.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -141,7 +143,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Chili con carne.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Chili con carne</h1>
@@ -237,7 +239,7 @@
                     <p>A churro is a type of fried dough from Spanish and Portuguese cuisine.  churros can either be thin (and sometimes knotted) or long and thick, and served with chocolate or maple</p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Choroos.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -324,7 +326,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\firstdish.png" alt="main picture">   
+                    <img class="img-me" src="images\recipes\Paloma cocktail.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Paloma cocktail</h1>
