--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -75,8 +75,13 @@
                             <span></span>
                             <span></span>
                             <span></span>
+
                         </div>
                     </div>
+                    <h5 class="center">See The Master's in action</h5>
+                    <video width="500" height="400" autoplay loop class="centerAudio">
+                        <source src="images\videoplayback.mp4" type="video/mp4">
+                      </video>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                     <img class="img-me" src="images\Swiss House _ سويس هاوس.jpg">
