Fix php files and validations

--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -13,7 +13,7 @@
     <script>
         function sendform() {
             const form = new FormData(document.getElementById('contentForm'));
-            const req = new Request('PHP\index.php');
+            const req = new Request('index.php');
             fetch(req, {
                 method: 'POST',
                 body: form
