--- a/Tips_page.html
+++ b/Tips_page.html
@@ -83,9 +83,9 @@
         <div class="container">
             <div class="row rowwidth">
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\workspace.jpg" alt="firstmeal" height="350">
+                    <h1>Workspace</h1>
+                    <p>Set up your workspace by gathering clean tools, bowls and utensils. And make sure to keep a trashcan within arm’s reach.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -126,9 +126,9 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Egg Wash.jpg" alt="firstmeal" height="350">
+                    <h1>Egg Wash</h1>
+                    <p>To create an egg wash, whisk together a large egg with one tablespoon of water until smooth. Use as a glue to seal pastries, then brush on top for a glossy appearance</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -169,9 +169,9 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Peel Tomatoes1.jpg" alt="firstmeal" height="350">
+                    <h1>Peel Tomatoes</h1>
+                    <p>Peel tomatoes with ease! Cut an X in the top, and then simmer in a pot of hot water for 15 to 30 seconds. Cool down and the skin will fall right off.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -214,9 +214,9 @@
             </div>
             <div class="row rowwidth">
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Plan and Clean.jpg" alt="firstmeal" height="350">
+                    <h1>Plan and Clean</h1>
+                    <p>Always read and re-read your recipes before you start cooking. Clean as you go.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -257,9 +257,9 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Butter.jpg" alt="firstmeal" height="350">
+                    <h1>Butter</h1>
+                    <p>To prevent butter from over-browning in your pan, add a little bit of lemon juice.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -300,9 +300,9 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <img class="img-me" src="images\Tips\SALT.jpg" alt="firstmeal" height="350">
                     <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <p>Embrace salt. Don’t be afraid to use salt; it pulls the flavors out of your dishes. Cook with kosher salt and season with sea salt.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -345,9 +345,9 @@
             </div>
             <div class="row rowwidth">
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Spices.jpg" alt="firstmeal" height="350">
+                    <h1>Spices</h1>
+                    <p>Keep your spices away from sources of heat like the stove or lights. Herbs and spices can lose their flavor when exposed to humidity and heat.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -388,9 +388,9 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Onion.jpg" alt="firstmeal" height="350">
+                    <h1>Onion</h1>
+                    <p>To prevent tears, cut off the root of the onion before you slice.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
@@ -431,9 +431,9 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
-                    <h1>SALT</h1>
-                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <img class="img-me" src="images\Tips\Honey1.jpg" alt="firstmeal" height="350">
+                    <h1>Honey</h1>
+                    <p>Honey is a natural preservative and will never spoil.</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
