--- a/Mexican_page.html
+++ b/Mexican_page.html
@@ -14,9 +14,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid bottom">
         <div class="row">
-            <nav class="navbar">
+            <nav class="navbar fixed-top">
                 <div class="col-xl-2 col-md-2 logo">Master's</div>
                 <div class="col-xl-4 iconbar">
                     <a href="www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
