--- a/Tips_page.html
+++ b/Tips_page.html
@@ -55,9 +55,9 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="TheMasterswebsite.html">Home</a></li>
-                        <li><a href="TheMasterswebsite.html#Idea">Idea</a></li>
-                        <li><a href="TheMasterswebsite.html#About">About Us</a></li>
+                        <li><a href="index.php">Home</a></li>
+                        <li><a href="index.php#Idea">Idea</a></li>
+                        <li><a href="index.php#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
